correction_ecommerce/css_simplified

--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
       <small class="subtitle_tendances">Ici et nulle part ailleurs !</small>
       <section>
 
-        <div class="tendances_block_1">
+        <div class="tendances_block">
 
           <!-- Article 1 tendance  -->
 
 
           <article class="tendances_article">
 
-            <div class="tendances_article_img_design"> </div>
+            <div class="tendances_article" style="background-image: url(images/design.jpg)"> </div>
 
             <div class="tendances_article_text">
               <a href="#" class="link_tendance">
@@ -124,7 +124,7 @@
           <article class="tendances_article">
 
 
-            <div class="tendances_article_img_dev"></div>
+            <div class="tendances_article" style=" background-image: url(images/code.jpg)"></div>
             <div class="tendances_article_text">
               <a href="#">
                 <h3>
@@ -140,11 +140,11 @@
 
         <!-- Article 3 tendance  -->
 
-        <div class="tendances_block_2">
+        <div class="tendances_block">
 
           <article class="tendances_article">
 
-            <div class="tendances_article_img_univ"></div>
+            <div class="tendances_article" style="background-image: url(images/faqstudent.jpg)"></div>
 
             <div class="tendances_article_text">
               <a href="#">
@@ -162,7 +162,7 @@
 
           <article class="tendances_article">
 
-            <div class="tendances_article_img_music"></div>
+            <div class="tendances_article" style="  background-image: url(images/musique.jpg)"></div>
 
             <div class="tendances_article_text">
               <a href="#">
@@ -218,7 +218,7 @@
               <p>530 $</p>
             </div>
 
-            <button type="button" name="button" class="add_to_cart_1" id="add_to_cart_1">Ajouter au panier</button>
+            <button type="button" name="button" class="add_to_cart" id="add_to_cart">Ajouter au panier</button>
 
           </div>
 
@@ -253,7 +253,7 @@
               <del>674 $</del>
               <p>480 $</p>
             </div>
-            <button type="button" name="button" class="add_to_cart_2" id="add_to_cart_2">Ajouter au panier</button>
+            <button type="button" name="button" class="add_to_cart" id="add_to_cart">Ajouter au panier</button>
 
           </div>
         </article>
@@ -283,7 +283,7 @@
               <p>700 $</p>
             </div>
 
-            <button type="button" name="button" class="add_to_cart_3" id="add_to_cart_3">Ajouter au panier</button>
+            <button type="button" name="button" class="add_to_cart" id="add_to_cart">Ajouter au panier</button>
 
           </div>
         </article>
@@ -315,7 +315,7 @@
               <p>410 $</p>
             </div>
 
-            <button type="button" name="button" class="add_to_cart_4" id="add_to_cart_4"> Ajouter au panier</button>
+            <button type="button" name="button" class="add_to_cart" id="add_to_cart"> Ajouter au panier</button>
 
           </div>
 
